--- a/index.html
+++ b/index.html
@@ -4,49 +4,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.min.css"
+      integrity="sha256-3IkGqGYOvq1Ype2MXFwVJFeBtBACgiveho3SacOEEP8="
+      crossorigin="anonymous"
+    />
     <title>Campeonisimos</title>
   </head>
   <body>
-    <div class="container">
-      <section>
+    <div class="container" id="fullPage">
+      <section class="section">
         <img src="./src/mainText.svg" alt="" class="mainText" />
         <img src="./src/arrowDown.svg" alt="" class="arrow" />
       </section>
 
-      <section class="trofeos">
+      <!-- trofeos liga MX -->
+      <section class="trofeos section">
         <img src="./src/secondaryText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container">
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <div class="trofeos-subcontainer">
-            <img src="./src/trofeo-min.png" alt="trofeomx" class="trofeo" />
-            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+            <img
+              src="./src/trofeo-min.png"
+              alt="trofeomx"
+              class="trofeo"
+              id="trofeo"
+            />
           </div>
           <h2 class="hola">1956-57</h2>
           <h2 class="hola">1958-59</h2>
@@ -58,7 +97,175 @@
           <h2 class="hola">1957-58</h2>
         </div>
       </section>
+      <!-- trofeos campeon-de-campeones -->
+      <section class="trofeos section">
+        <img src="./src/tertiaryText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container campeones">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCampeoDeCampeones.png"
+              alt="trofeomx"
+              class="trofeo trofeo-campeones"
+            />
+          </div>
+          <h2 class="hola">1956-57</h2>
+          <h2 class="hola">1958-59</h2>
+          <h2 class="hola">1959-60</h2>
+          <h2 class="hola">1960-61</h2>
+          <h2 class="hola">1961-62</h2>
+          <h2 class="hola">1963-64</h2>
+        </div>
+      </section>
+      <!-- trofeos copa mexico -->
+      <section class="trofeos section">
+        <img src="./src/fourthText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container copa-mexico">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCopa.png"
+              alt="trofeomx"
+              class="trofeo trofeo-copa"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/trofeoCopa.png"
+              alt="trofeomx"
+              class="trofeo trofeo-copa"
+            />
+          </div>
+          <h2 class="hola">1956-57</h2>
+          <h2 class="hola">1958-59</h2>
+        </div>
+      </section>
+      <!-- concacaf -->
+      <section class="trofeos section">
+        <img src="./src/fifthText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container copa-concacaf">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaConcacaf.png"
+              alt="trofeomx"
+              class="trofeo trofeo-concacaf"
+            />
+            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+          </div>
+          <h2 class="hola">1956-57</h2>
+        </div>
+      </section>
+      <!-- copa challenger 1 -->
+      <section class="trofeos section">
+        <img src="./src/sixthText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container copa-challenger">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaChallenger.png"
+              alt="trofeomx"
+              class="trofeo trofeo-challenger"
+            />
+            <img src="./src/arrowDown.svg" alt="" class="arrowTrofeo" />
+          </div>
+          <h2 class="hola">1956-57</h2>
+        </div>
+      </section>
+      <!-- pentagonales internaciones 3  -->
+      <section class="trofeos section">
+        <img src="./src/seventhText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container copa-pentagonales">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaChallenger.png"
+              alt="trofeomx"
+              class="trofeo trofeo-pentagonales"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaChallenger.png"
+              alt="trofeomx"
+              class="trofeo trofeo-pentagonales"
+            />
+          </div>
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaChallenger.png"
+              alt="trofeomx"
+              class="trofeo trofeo-pentagonales"
+            />
+          </div>
+          
+        </div>
+      </section>
+      <!-- torneo de la ciudad de Guadalajara 1 -->
+      <section class="trofeos section">
+        <img src="./src/eighthText.svg" alt="" class="secondary-text" />
+        <div class="trofeos-container copa-challenger">
+          <div class="trofeos-subcontainer">
+            <img
+              src="./src/copaConcacaf.png"
+              alt="trofeomx"
+              class="trofeo trofeo-guadalajara"
+            />
+          </div>
+          
+        </div>
+      </section>
+
+      <!-- footer -->
+      <section class="section footer">
+        <img src="./src/lastText.svg" alt="" class="textFooter" />
+        <div class="trofeos-footer">
+          <img src="./src/trofeoCopa.png" alt="" id="copa" class="trofeo" />
+          <img src="./src/copaConcacaf.png" id="concacaf" class="trofeo" />
+          <img src="./src/copaChallenger.png" id="challenger" class="trofeo" />
+          <img
+            src="./src/trofeoCampeoDeCampeones.png"
+            id="campeones"
+            class="trofeo"
+          />
+          <img src="./src/trofeo-min.png" alt="" id="liga" class="trofeo" />
+        </div>
+        <a href="index.html" class="footerText"
+          ><img src="./src/footer.svg" alt="" class="imgText"
+        /></a>
+      </section>
     </div>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.7/fullpage.min.js"
       integrity="sha256-e13jRNqOX98m6UAwI/yZTpcDseJtA8s86yfFs4Sqrv8="
