add anime min js

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/scroll.js"></script>
-    <script src="./node_modules\animejs\lib\anime.min.js"></script>
+    <script src="./js/anime.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
