--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <!-- trofeos liga MX -->
       <section class="trofeos section">
-        <img src="./src/secondaryText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/secondaryText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container">
           <div class="trofeos-subcontainer">
             <img
@@ -99,7 +99,7 @@
       </section>
       <!-- trofeos campeon-de-campeones -->
       <section class="trofeos section">
-        <img src="./src/tertiaryText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/tertiaryText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container campeones">
           <div class="trofeos-subcontainer">
             <img
@@ -153,7 +153,7 @@
       </section>
       <!-- trofeos copa mexico -->
       <section class="trofeos section">
-        <img src="./src/fourthText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/fourthText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container copa-mexico">
           <div class="trofeos-subcontainer">
             <img
@@ -175,7 +175,7 @@
       </section>
       <!-- concacaf -->
       <section class="trofeos section">
-        <img src="./src/fifthText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/fifthText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container copa-concacaf">
           <div class="trofeos-subcontainer">
             <img
@@ -190,7 +190,7 @@
       </section>
       <!-- copa challenger 1 -->
       <section class="trofeos section">
-        <img src="./src/sixthText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/sixthText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container copa-challenger">
           <div class="trofeos-subcontainer">
             <img
@@ -205,7 +205,7 @@
       </section>
       <!-- pentagonales internaciones 3  -->
       <section class="trofeos section">
-        <img src="./src/seventhText.svg" alt="" class="secondary-text" />
+        <img style="width: 100%;" src="./src/seventhText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container copa-pentagonales">
           <div class="trofeos-subcontainer">
             <img
@@ -228,12 +228,11 @@
               class="trofeo trofeo-pentagonales"
             />
           </div>
-          
         </div>
       </section>
       <!-- torneo de la ciudad de Guadalajara 1 -->
       <section class="trofeos section">
-        <img src="./src/eighthText.svg" alt="" class="secondary-text" />
+        <img  style="width: 100%;" src="./src/eighthText.svg" alt="" class="secondary-text" />
         <div class="trofeos-container copa-challenger">
           <div class="trofeos-subcontainer">
             <img
@@ -242,7 +241,6 @@
               class="trofeo trofeo-guadalajara"
             />
           </div>
-          
         </div>
       </section>
 
