updated main text

--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
   <body>
     <div class="container" id="fullPage">
       <section class="section">
-        <img src="./src/mainText.svg" alt="" class="mainText" />
+        <div class="mainText">
+          <img src="./src/EL CAMPEONISIMO..svg" alt=""  />
+          <img src="./src/mainText.svg" alt=""  />
+        </div>
         <img src="./src/arrowDown.svg" alt="" class="arrow" />
       </section>
 
       <!-- trofeos liga MX -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/secondaryText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/secondaryText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container">
           <div class="trofeos-subcontainer">
             <img
@@ -99,7 +107,12 @@
       </section>
       <!-- trofeos campeon-de-campeones -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/tertiaryText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/tertiaryText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container campeones">
           <div class="trofeos-subcontainer">
             <img
@@ -153,7 +166,12 @@
       </section>
       <!-- trofeos copa mexico -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/fourthText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/fourthText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container copa-mexico">
           <div class="trofeos-subcontainer">
             <img
@@ -175,7 +193,12 @@
       </section>
       <!-- concacaf -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/fifthText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/fifthText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container copa-concacaf">
           <div class="trofeos-subcontainer">
             <img
@@ -190,7 +213,12 @@
       </section>
       <!-- copa challenger 1 -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/sixthText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/sixthText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container copa-challenger">
           <div class="trofeos-subcontainer">
             <img
@@ -205,7 +233,12 @@
       </section>
       <!-- pentagonales internaciones 3  -->
       <section class="trofeos section">
-        <img style="width: 100%;" src="./src/seventhText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/seventhText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container copa-pentagonales">
           <div class="trofeos-subcontainer">
             <img
@@ -232,7 +265,12 @@
       </section>
       <!-- torneo de la ciudad de Guadalajara 1 -->
       <section class="trofeos section">
-        <img  style="width: 100%;" src="./src/eighthText.svg" alt="" class="secondary-text" />
+        <img
+          style="width: 100%;"
+          src="./src/eighthText.svg"
+          alt=""
+          class="secondary-text"
+        />
         <div class="trofeos-container copa-challenger">
           <div class="trofeos-subcontainer">
             <img
