--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container" id="fullPage">
       <section class="section">
         <div class="mainText">
-          <img src="./src/EL CAMPEONISIMO..svg" alt=""  />
-          <img src="./src/mainText.svg" alt=""  />
+          <img src="./src/EL CAMPEONISIMO..svg" alt="campeonisimo" class="campeonisimo" />
+          <img src="./src/mainText.svg" alt="description" class="description"  />
         </div>
         <img src="./src/arrowDown.svg" alt="" class="arrow" />
       </section>
