main text updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="section">
         <div class="mainText">
           <img src="./src/EL CAMPEONISIMO..svg" alt="campeonisimo" class="campeonisimo" />
-          <img src="./src/mainText.svg" alt="description" class="description"  />
+          <img src="./src/mainText_.svg" alt="description" class="description"  />
         </div>
         <img src="./src/arrowDown.svg" alt="" class="arrow" />
       </section>
